tests/sksl/errors/ReservedNameSampler3DRect.glsl
### Compilation failed:

error: 1: 'sampler3DRect' is a reserved word
int sampler3DRect;
    ^^^^^^^^^^^^^
1 error
